@@ -133,7 +133,7 @@
   <xsd:element name="sql">
     <xsd:complexType>
       <xsd:attribute name="name"       type="xsd:NMTOKENS"   use="optional"/>
-      <xsd:attribute name="type"       type="xsd:NMTOKENS"   use="optional"/>
+      <xsd:attribute name="type"       type="xsd:string"   use="optional"/>
       <xsd:attribute name="many-table" type="xsd:NMTOKEN"    use="optional"/>
       <xsd:attribute name="many-key"   type="xsd:NMTOKENS"   use="optional"/>
       <xsd:attribute name="read-only"  type="xsd:boolean"    use="optional" default="false"/>
